--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,57 +1,66 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: express-sample-app
+  annotations:
+    #app.openshift.io/vcs-ref: f7580aa1eb6f7176705176e201ecff4de93edafb
+    #app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-japan-cohort/yu-yamanaka-express-sample-app.git
+  labels:
+    app: yu-yamanaka-pipeline-from-scratch
+    app.kubernetes.io/instance: yu-yamanaka-pipeline-from-scratch
+    app.kubernetes.io/name: yu-yamanaka-pipeline-from-scratch
+    app.openshift.io/runtime: js
+  name: yu-yamanaka-pipeline-from-scratch
 spec:
+  progressDeadlineSeconds: 600
   replicas: 1
+  revisionHistoryLimit: 10
   selector:
     matchLabels:
-      app.kubernetes.io/instance: app-instance
-      app.kubernetes.io/name: app
+      app.kubernetes.io/instance: yu-yamanaka-pipeline-from-scratch
+      app.kubernetes.io/name: yu-yamanaka-pipeline-from-scratch
   template:
     metadata:
+      creationTimestamp: null
       labels:
-        app.kubernetes.io/instance: app-instance
-        app.kubernetes.io/name: app
+        app.kubernetes.io/instance: yu-yamanaka-pipeline-from-scratch
+        app.kubernetes.io/name: yu-yamanaka-pipeline-from-scratch
     spec:
-      restartPolicy: Always
-      terminationGracePeriodSeconds: 30
-      dnsPolicy: ClusterFirst
-      schedulerName: default-scheduler
       containers:
-      - name: express-sample-app
-        image: quay.io/upslopeio/express-sample-app:d90c742ee626048c4d1e2032eb836255e4036561
-        ports:
-        - name: http
-          protocol: TCP
-          containerPort: 3000
-        env:
-        - name: INGRESS_HOST
-        - name: PROTOCOLS
-        - name: LOG_LEVEL
-          value: debug
-        resources: {}
-        livenessProbe:
-          failureThreshold: 3
-          httpGet:
-            port: 3000
-            path: /
-            scheme: HTTP
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 1
-        readinessProbe:
-          failureThreshold: 3
-          httpGet:
-            port: http
-            path: /
-            scheme: HTTP
-          periodSeconds: 10
-          successThreshold: 1
-          timeoutSeconds: 1
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-        imagePullPolicy: IfNotPresent
+        - env:
+          - name: INGRESS_HOST
+          - name: PROTOCOLS
+          - name: LOG_LEVEL
+            value: debug
+          image: quay.io/yu_yamanaka_ibm/express-sample-app
+          imagePullPolicy: IfNotPresent
+          livenessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: 3000
+              scheme: HTTP
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          name: yu-yamanaka-pipeline-from-scratch
+          ports:
+            - containerPort: 3000
+              name: http
+              protocol: TCP
+          readinessProbe:
+            failureThreshold: 3
+            httpGet:
+              path: /
+              port: http
+              scheme: HTTP
+            periodSeconds: 10
+            successThreshold: 1
+            timeoutSeconds: 1
+          resources: {}
+          terminationMessagePath: /dev/termination-log
+          terminationMessagePolicy: File
+      dnsPolicy: ClusterFirst
+      restartPolicy: Always
+      schedulerName: default-scheduler
       securityContext: {}
-  revisionHistoryLimit: 10
-  progressDeadlineSeconds: 600
+      terminationGracePeriodSeconds: 30
