--- a/k8s/route.yaml
+++ b/k8s/route.yaml
@@ -1,12 +1,15 @@
 apiVersion: route.openshift.io/v1
 kind: Route
 metadata:
-  name: express-sample-app
+  annotations:
+    argocd.argoproj.io/sync-options: Validate=false
+    openshift.io/host.generated: "true"
+  name: akpfs
 spec:
   tls:
     termination: edge
   to:
-    name: express-sample-app
-    kind: Service
-    weight: 100
+     kind: Service
+     name: yu-yamanaka-pipeline-from-scratch
+     weight: 100
   wildcardPolicy: None
