--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -1,15 +1,19 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: express-sample-app
+  labels:
+    app: yu-yamanaka-pipeline-from-scratch
+    app.kubernetes.io/instance: yu-yamanaka-pipeline-from-scratch
+    app.kubernetes.io/name: yu-yamanaka-pipeline-from-scratch
+  name: yu-yamanaka-pipeline-from-scratch
 spec:
-  type: ClusterIP
-  selector:
-    app.kubernetes.io/instance: app-instance
-    app.kubernetes.io/name: app
   ports:
-  - name: http
-    protocol: TCP
-    port: 80
-    targetPort: 3000
+    - name: http
+      port: 80
+      protocol: TCP
+      targetPort: 3000
+  selector:
+    app.kubernetes.io/instance: yu-yamanaka-pipeline-from-scratch
+    app.kubernetes.io/name: yu-yamanaka-pipeline-from-scratch
   sessionAffinity: None
+  type: ClusterIP
